[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameManager.gd" type="Script" id=2]
[ext_resource path="res://Paddle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/Soft_and_Furious_-_07_-_C_L_I_M_A_X.mp3" type="AudioStream" id=4]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=5]
[ext_resource path="res://Background.tscn" type="PackedScene" id=6]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 1.13
glow_strength = 1.32
glow_blend_mode = 0
glow_hdr_threshold = 0.95

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="Background" parent="." instance=ExtResource( 6 )]

[node name="Paddle" parent="." instance=ExtResource( 3 )]
position = Vector2( 548.063, 498.669 )
scale = Vector2( 3, 3 )

[node name="Wall" parent="." instance=ExtResource( 5 )]
position = Vector2( 3.02806, 2.27689 )

[node name="TimerForLevel" type="Timer" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.5

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[connection signal="timeout" from="TimerForLevel" to="." method="_on_TimerForLevel_timeout"]
